[package]
name = "shahash-rs"
version = "0.1.0"
authors = ["Evan Chaney <evanachaney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
log = "0.4"
pretty_env_logger = "0.4"

pretty_assertions = "1.0.0"
